--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.5.1",
     "@mui/x-data-grid": "^5.6.1",
+    "@mui/x-data-grid-generator": "^5.7.0",
+    "@mui/x-data-grid-pro": "^5.7.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
