--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.29.0",
     "react-paginate": "^8.1.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
