--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "downshift": "^6.1.7",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
