--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.29.0",
+    "react-multiple-image-uploader": "^1.0.3",
     "react-paginate": "^8.1.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
