--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "downshift": "^6.1.7",
     "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-adal": "^0.5.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.29.0",
