--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "fs": "0.0.1-security",
     "knex": "^1.0.7",
     "mssql": "^8.0.2",
     "multer": "^1.4.4",
